...
            android:elevation="@dimen/button_elevation"
            android:text="@string/email_connect"
            android:textColor="@android:color/background_dark"
            android:typeface="normal"/>

        <Button
            android:id="@+id/guest_login_btn"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/transparent"
            android:contentDescription="@string/guest_connect"
            android:elevation="@dimen/button_elevation"
...
