<resources>
    <string name="app_name">O.com App Prototype</string>
    <string name="app_title">O.com App</string>
    <string name="app_title_short">OApp</string>

    <string name="home_page_label" translatable="false">O.com App</string>
    <string name="faceBook_connect">Connect with Facebook</string>
    <string name="google_connect">Connect with G+</string>
    <string name="email_connect">Connect with Email</string>
    <string name="guest_connect"><u>Continue As Guest</u></string>

    <!-- Email Signin String Values -->
    <string name="email_sign_in">Sign In</string>
    <string name="email_sign_out">Sign Out</string>
    <string name="email_cancel">Cancel</string>
    <string name="email_sign_up">Sign Up</string>
    <string name="email_sign_up_link"><u>Sign Up</u></string>

    <!-- GoogleSignInFragment string values-->
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google Sign-In</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>

    <string name="server_client_id">751274716012-ei5adcf6mg79hfj5i8s93isfimvareqt.apps.googleusercontent.com</string>
    <string name="google_connect_failed">An unresolvable error has occurred and Google APIs (including Sign-In) will not be available.</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="faceBook_login_toast">FaceBook Login Coming Soon!</string>
    <string name="guest_login_toast">Guest Login Coming Soon!</string>


    <!-- Community Activity Button -->
    <string name="btn_community_default">Select 3 Communities</string>
    <string name="btn_community_continue">Continue ✓</string>

    <!-- Tool Bar -->

    <string name="action_refresh">Refresh</string>
    <string name="communitiesToolbarText">Tap to add communities.</string>
    <string name="feedToolbarText">Your Interests</string>
    <string name="communities_activity">Communities Activity</string>
    <string name="feed_activity">Feed Activity</string>
    <string name="action_logout">Log Out</string>
    <string name="communities_activity_title">Communities</string>
    <string name="nfl_link">nfl_link</string>
    <string name="communities_link">Communities Link</string>
    <string name="home_activity">Home</string>
    <string name="title_activity_communities">Communities</string>
    <string name="product_detail_activity">Product Details</string>

    <!-- Feed Activity Tabs -->
    <string name="my_feed_tab">My Feed</string>
    <string name="trending_tab">Trending</string>
    <string name="my_location_tab">My Location</string>

    <!-- Feed Activity related Fragments text -->
    <string name="feed_fragment">Feed Fragment</string>
    <string name="feed_nfl_link_text">Top NFL Fan Products for 2016</string>
    <string name="trending_fragment">Trending Fragment</string>
    <string name="trending_text">These are the latest trending products&#8230;</string>
    <string name="my_location_fragment">My Location Fragment</string>
    <string name="my_location_text">You current location is Sligo, Ireland</string>

    <string name="title_brand_activity">Brand</string>
    <string name="top_category_title">Top Categories</string>
    <string name="top_category_link"><u>Shop All</u></string>

    <!-- Shared Element Transition Names-->
    <string name="shared_element_transition">brand_element_image</string>
    <string name="test_shared_element_transition">brand_element_image</string>
    <string name="product_price_fmt">%1$s %2$s</string>
    <string name="product_price_fmt_v2">%1$s %2$.2f</string>
    <string name="apply_transition_label">Apply Transition</string>
    <string name="womens_assessories_label">Women\'s Accessories</string>
    <string name="jersey_label">Jerseys</string>
    <string name="best_sellers_label">Best Sellers</string>
    <string name="new_arrivals_label">New Arrivals</string>
    <string name="top_nfl_prod_label">Top NFL Fan Products for 2016</string>
    <string name="nfl_dot_com_label">NFL.com</string>
    <string name="raider_jersey_label">Raiders Jersey</string>
    <string name="raider_jersey_price_label">$65</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!--<string name="product_img_base_url">http://ak1.ostkcdn.com/images/products/</string>-->
    <string name="ostk_base_rest_url">http://www.overstock.com/api/</string>
    <string name="similar_producst_labels">Similar Products</string>
    <string name="webview_html_encoding">text/html; charset=UTF-8</string>

    <!-- Connect with Email Sign Up placeholder text -->
    <string name="password_placeholder_text">Password</string>
    <string name="confirm_password_placeholder_text">Confirm Password</string>
    <string name="username_placeholder_text">Email</string>

    <!-- Parse strings -->
    <string name="parse_service_url">http://10.8.159.145:23743/parse</string>
    <string name="parse_application_id">OAPP</string>
    <string name="option_placeholder_test">Select Option</string>
    <string name="unsuccessful_oapp_sign_up_message">User account has already been created.</string>
    <string name="successful_oapp_sign_up_message">User was signed up successfully.</string>
    <string name="sign_up_required_fields_message">Please enter required fields.</string>
    <string name="sign_up_passwordconfirm_error_message">Password and Confirm Password fields do not match.</string>
    <string name="parse_test_username">testuser1@gmail.com</string>
    <string name="parse_test_user_password">testuser1</string>

    <!-- Image Base URLS -->
    <string name="cdn_img_base_url">http://ak1.ostkcdn.com/images/products/</string>

    <!--Product Buy Sheet Strings-->
    <string name="product_option_button_text">Continue</string>
    <string name="quantity_counter_initial_count">1</string>
    <string name="quantity_counter_label">Quantity</string>
    <string name="product_options_sheet_label">Product Options</string>

    <!--Rewards Edit Section Strings-->
    <string name="rewards_edit_box_label">Rewards</string>
    <string name="rewards_edit_box_placeholder_value">$12.57</string>
    <string name="rewards_edit_box_btn_text">Apply</string>

    <!--Buy Sheet payment Section Strings-->
    <string name="btn_pay_google_wallet_text">Pay with Google wallet</string>
    <string name="btn_pay_credit_card_text">Pay with Credit Card</string>

    <!--Buy Sheet Strings-->
    <string name="total_price_header_label">Total Price :</string>
    <string name="total_price_placeholder">$200.99</string>


    <!--Additional Purchase Information Strings-->
    <string name="order_sheet_info_label">Additional Information</string>
    <string name="add_option_btn_text">Add Option </string>
    <string name="add_option_label">Product Option</string>
    <string name="add_card_btn_text">Add Card </string>
    <string name="add_add_card_label">Billing Info</string>
    <string name="add_address_btn_text">Add Address </string>
    <string name="add_address_label">Shipping Address</string>
    <string name="select_shipping_btn_text">Standard </string>
    <string name="select_shipping_label">Shipping Method</string>

    <!--Buy Sheet Order Details Strings-->
    <string name="order_details_rewards_label">Rewards Used</string>
    <string name="order_details_shipping_label">Shipping</string>
    <string name="order_details_tax_label">Tax</string>
    <string name="order_details_total_label">Total</string>
    <string name="order_details_rewards_placeholder">$00.00</string>
    <string name="order_details_shipping_placeholder">FREE</string>
    <string name="order_details_tax_placeholder">$24.00</string>
    <string name="order_details_total_placeholder">$486.43</string>

    <!-- More Information link text -->
    <string name="more_information_link_text">More Information +</string>
    <string name="more_info_details_button_text">Details</string>
    <string name="more_info_shipping_button_text">Shipping/Returns</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra quis mauris et congue. Mauris lacinia porttitor vestibulum. Donec id ipsum at tortor iaculis pulvinar sed id nunc. Mauris lacinia porttitor vestibulum. Donec id ipsum at tortor iaculis pulvinar sed id nunc.</string>
    <string name="shipping_title_text">Shipping Information</string>
    <string name="details_title_text">Description</string>
    <string name="returns_title_text">Returns</string>
    <string name="reviews_text"> / 5 </string>

</resources>
