<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.overstock.android.prototype.activity.FeedActivity">

    <ProgressBar
        android:id="@+id/feed_progressLoader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:animateLayoutChanges="true"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
