...

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <include
                android:id="@+id/best_sellers_hrv"
                layout="@layout/fragment_horizontial_scroll" />

            <include
                android:id="@+id/new_arrivals_hrv"
                layout="@layout/fragment_horizontial_scroll" />

...
